Fix unwanted horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ nav a {
 
 
 
-.bacground_main {
+.background_main {
     position: relative;
 }
 
-.bacground_main::before {
+.background_main::before {
     content: "";
     position: absolute;
     top: 0;
@@ -142,12 +142,11 @@ nav a {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    width: 300%;
+    width: 100%;
     color: #71870E;
     margin: -276px 0px 0px 0px;
     padding-bottom: 75px;
     white-space: nowrap;
-    transform: translateX(-50%);
 }
 
 #about {
